@@ -1,9 +1,10 @@
 Package: tm.plugin.mail
 Title: Text Mining E-Mail Plug-In
-Version: 0.0-7
-Date: 2013-08-21
+Version: 0.0-8
+Date: 2013-09-26
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
-                    email = "feinerer@logic.at"))
-Imports: tm
+                    email = "feinerer@logic.at"),
+             person("Wolfgang", "Mauerer", role = c("aut"))
+Imports: tm (>= 0.5-9.5)
 Description: A plug-in for the tm text mining framework providing mail handling functionality.
 License: GPL-3
